fix z-index of user menu (overlap of sticky search headers)

--- a/css/includes/components/_global-menu.scss
+++ b/css/includes/components/_global-menu.scss
@@ -54,6 +54,10 @@
 
 .sidebar {
 
+   & ~ .navbar {
+      z-index: $zindex-fixed;
+   }
+
    & ~ .page-wrapper, ~ .navbar {
       transition: margin-inline-start var(--animate-duration);
    }
